# pika-akinator

./: CMakeLists.txt  README.md  graphvizex.dot  input  main.cpp  out  tree-example
headers/: Akinator.h  AkinatorTree.h  AkinatorTreeFuncs.h
sources/: Akinator.cpp  AkinatorTree.cpp  AkinatorTreeFuncs.cpp
